<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        style="@style/TitleText" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/title"

        >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_reader_btn"
        android:id="@+id/spotifyBtn"
        android:layout_margin="5dp"
        style="@style/MyButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_btn"
        android:id="@+id/scoresBtn"
        android:layout_below="@+id/spotifyBtn"
        android:layout_margin="5dp"
        style="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn"
        android:id="@+id/libraryBtn"
        android:layout_below="@+id/scoresBtn"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        style="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn"
        android:id="@+id/buildBtn"
        android:layout_below="@+id/libraryBtn"
        android:layout_margin="5dp"
        style="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn"
        android:id="@+id/xyzBtn"
        android:layout_below="@+id/buildBtn"
        android:layout_margin="5dp"
        style="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_btn"
        android:id="@+id/capstoneBtn"
        android:layout_below="@+id/xyzBtn"
        style="@style/MyButton"
        android:background="#CD0E3E"
        android:textColor="#ffffffff"
        android:layout_margin="5dp"/>

    </RelativeLayout>

</RelativeLayout>
